--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     > Get Copilot Free</a>
                 </div>
                 <p class="center" style="position: relative; top: 115px">
-                    <a class="link" href="file:///Users/dr_z_i_m_m/code.visualstudio.com/aHack.htm" target="_blank    "> Web</a> ,
+                    <a class="link" href="./aHack.htm" target="_blank    "> Web</a> ,
                     <a class="link" href="file:///Users/dr_z_i_m_m/Insiders%20edition.htm"> Insiders edition</a> , or
                     <a class="link" href="file:///Users/dr_z_i_m_m/Other%20Platforms.htm"> other platforms</a>
                 </p>
