--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             >
             <nav style="position: relative; left: 130px; top: -27px;" id="navi2">
                 <b>
-                    <a href="./code.visualstudio.com.htm"> Visual Studio Code</a>
+                    <a href="https://z-coder672.github.io/code.visualstudio.com/> Visual Studio Code</a>
                 </b> &nbsp&nbsp&nbsp
                 <nav id="docs"> Docs</nav> &nbsp&nbsp&nbsp
                 <nav id="updates"> Updates</nav> &nbsp&nbsp&nbsp
